{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 17,
  "lineage": "805c336d-a3a7-75aa-144c-3218498c4d06",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8eba077e154d514",
            "domain": "vpc",
            "id": "eipalloc-0d8eba077e154d514",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-52-15-133-221.us-east-2.compute.amazonaws.com",
            "public_ip": "52.15.133.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-nat-gw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-nat-gw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b8534ff4b424939",
            "arn": "arn:aws:ec2:us-east-2:804872348047:instance/i-00af70519664fcbc2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00af70519664fcbc2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sbi-web-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-019a0363356b42749",
            "private_dns": "ip-10-0-1-234.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.234",
            "public_ip": "3.145.83.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-2:804872348047:key/29b1bbf7-aeb8-4918-b2dc-42ad6997105b",
                "throughput": 0,
                "volume_id": "vol-077b758744cdd0601",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025d96b525cd86c4d",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d22186e63ca08569"
            ]
          },
          "dependencies": [
            "aws_security_group.web-server",
            "aws_subnet.public_subnets",
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sbi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:internet-gateway/igw-0e036e6e1c979cfd5",
            "id": "igw-0e036e6e1c979cfd5",
            "owner_id": "804872348047",
            "tags": {
              "Name": "dev-igw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-igw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0f76a3d91c0f4e9a6"
          },
          "dependencies": [
            "aws_vpc.sbi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8eba077e154d514",
            "association_id": "eipassoc-0d1f757516c078b55",
            "connectivity_type": "public",
            "id": "nat-0e66247ccec0036b3",
            "network_interface_id": "eni-0b8a0f20f81557322",
            "private_ip": "10.0.1.47",
            "public_ip": "52.15.133.221",
            "subnet_id": "subnet-025d96b525cd86c4d",
            "tags": {
              "Name": "dev-nat-gw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-nat-gw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:route-table/rtb-08f5ed946572bfb79",
            "id": "rtb-08f5ed946572bfb79",
            "owner_id": "804872348047",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e66247ccec0036b3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-private-subnet",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-route-private-subnet",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f76a3d91c0f4e9a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:route-table/rtb-08025f57297645270",
            "id": "rtb-08025f57297645270",
            "owner_id": "804872348047",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e036e6e1c979cfd5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-public-subnets",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-route-public-subnets",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f76a3d91c0f4e9a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sbi",
            "aws_vpc.sbi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acd90143eae58463",
            "route_table_id": "rtb-08f5ed946572bfb79",
            "subnet_id": "subnet-0c222edddee0fd18d"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_subnets",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d989cf3fa5af8e01",
            "route_table_id": "rtb-08f5ed946572bfb79",
            "subnet_id": "subnet-061decd522e05252d"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_subnets",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3ecd1c59ff7d0a1",
            "route_table_id": "rtb-08025f57297645270",
            "subnet_id": "subnet-025d96b525cd86c4d"
          },
          "dependencies": [
            "aws_internet_gateway.sbi",
            "aws_route_table.public_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7e431af6851a59b",
            "route_table_id": "rtb-08025f57297645270",
            "subnet_id": "subnet-0e6af8889d0ecbb4b"
          },
          "dependencies": [
            "aws_internet_gateway.sbi",
            "aws_route_table.public_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:security-group/sg-0d22186e63ca08569",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d22186e63ca08569",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "My SG",
            "name_prefix": "",
            "owner_id": "804872348047",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My Server Dynamic SG",
              "Owner": "Ranjeet Jadhav"
            },
            "tags_all": {
              "Name": "My Server Dynamic SG",
              "Owner": "Ranjeet Jadhav"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f76a3d91c0f4e9a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sbi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:subnet/subnet-0c222edddee0fd18d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c222edddee0fd18d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804872348047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-1",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-private-1",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0f76a3d91c0f4e9a6"
          },
          "dependencies": [
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:subnet/subnet-061decd522e05252d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061decd522e05252d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804872348047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-2",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-private-2",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0f76a3d91c0f4e9a6"
          },
          "dependencies": [
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:subnet/subnet-025d96b525cd86c4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025d96b525cd86c4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804872348047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-1",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-public-1",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0f76a3d91c0f4e9a6"
          },
          "dependencies": [
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:subnet/subnet-0e6af8889d0ecbb4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6af8889d0ecbb4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804872348047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-2",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-public-2",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0f76a3d91c0f4e9a6"
          },
          "dependencies": [
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sbi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:vpc/vpc-0f76a3d91c0f4e9a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05c948853b62094fd",
            "default_route_table_id": "rtb-08e3f46784b96dee4",
            "default_security_group_id": "sg-093169a4e34445c8d",
            "dhcp_options_id": "dopt-fc5c9597",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f76a3d91c0f4e9a6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08e3f46784b96dee4",
            "owner_id": "804872348047",
            "tags": {
              "Name": "dev-vpc",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-vpc",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            }
          }
        }
      ]
    }
  ]
}